<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFirma"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:text="@string/firma"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/btnIndiviual"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:text="@string/klient_indywidualny"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/item_insert"
        android:scaleType="fitXY"
        android:src="@drawable/ic_customer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <ScrollView
        android:id="@+id/ViewTemplate"
        android:layout_marginTop="20dp"
        android:layout_width="375dp"
        android:layout_height="548dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinerTemplet"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/listaCustomers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <RelativeLayout
                android:id="@+id/listaBusiness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="20dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dodaj_art"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAddArt"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:drawableEnd="@drawable/ic_addart"
                    android:text="@string/art"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/listaViewArt"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>