<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="600dp"
    android:id="@+id/buisnessView"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <SearchView
        android:id="@+id/editSearchCustomers1"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_insert"
        android:iconifiedByDefault="false"
        android:inputType="number"
        android:layout_marginStart="40dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/wyszukaj_po_nip" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recrdView1"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="-290dp"
        tools:listitem="@layout/view_customers_search" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="-350dp"
        android:text="@string/dane_klienta_firmy"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/item_insert"
        android:paddingStart="10dp"
        android:hint="@string/imie"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint="@string/nazwisko"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginLeft="-310dp"
        android:layout_marginTop="227dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" Numer telefonu"
        android:inputType="phone"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/editTextMiejscowosc"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="-310dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" Miejscowość"
        android:inputType="textPersonName"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/editTextpostcode"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint="Kod pocztowy"
        android:inputType="textPersonName"

        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/editTextUlica"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="-310dp"
        android:layout_marginTop="315dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" Ulica"
        android:inputType="textPersonName"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/editTextUlicaNr"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="315dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" Numer"
        android:inputType="number"
        android:paddingStart="10dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-240dp"
        android:layout_marginTop="350dp"
        android:text="Termin dostawy: "
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/editTextDate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="-140dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" Data"
        android:inputType="date"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/editTextod"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" od"
        android:inputType="number"
        android:paddingStart="10dp" />

    <TextView

        android:id="@+id/textView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="390dp"
        android:text=" - "
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextdo"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" do"
        android:inputType="number"
        android:paddingStart="10dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-310dp"
        android:layout_marginTop="430dp"
        android:text="Numer paragonu:"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextParagon"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:layout_marginLeft="-140dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/item_insert"
        android:ems="10"
        android:hint=" data/nr sklepu/nr kasy/nr paragonu"
        android:inputType="textPersonName" />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_marginStart="-345dp"
        android:layout_marginTop="560dp"
        android:layout_height="1dp"/>


    <ImageView
        android:id="@+id/ImageCustomersTemplet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="-40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_close" />


</LinearLayout>